Feature: Optimizations for yarn

--- a/templates/mapred-site.xml.j2
+++ b/templates/mapred-site.xml.j2
@@ -8,6 +8,10 @@
             <value>yarn</value>
     </property>
     <property>
+            <name>yarn.app.mapreduce.am.staging-dir</name>
+            <value>/user</value>
+    </property>
+    <property>
             <name>yarn.app.mapreduce.am.env</name>
             <value>HADOOP_MAPRED_HOME=/usr/local/hadoop</value>
     </property>
